uneven image fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,7 @@ body {
         list-style-type: none;
         padding-right: 50px;
         margin: auto;
+        max-width:1100px;
     }
 
     /*give the navbar a padding space top and bottom, bold its font weight*/
@@ -425,7 +426,7 @@ body {
     }
 
     .profile {
-        padding-bottom: 5em;
+        padding-bottom: 15em;
     }
   
     .page-title {
@@ -501,6 +502,7 @@ body {
 
     .contact-title, .skill-title {
         margin: auto;
+        width:1100px;
         padding: 10em 0 2em 0;
         font-weight: 800;
         clear: both
